# esp32clock

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  flash  flash_ws2812  make_ota_image_ws2812  makeimage  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: apiserver.rs  clock.rs  config.rs  display.rs  font.rs  form.js  lib.rs  mqtt.rs  onewire.rs  state.rs  temp.rs  wifi.rs  ws2812.rs
static/: form.js  index.css
templates/: index.html  index.html.ask
