# Cargo.toml for esp32temp

[package]
name = "esp32clock"
version = "1.3.5"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
resolver = "2"


[[bin]]
name = "esp32clock"
harness = false     # do not use the built in cargo test harness -> resolve rust-analyzer errors
# test = false


[features]
default = ["esp32c3", "max7219"]
reset_settings = []
esp32s = []
esp32c3 = []
max7219 = ["dep:max7219"]
ws2812 = ["dep:smart-leds", "dep:smart-leds-trait"]
special = []


[dependencies]
anyhow = "1"
askama = "0"
axum = { version = "0", features = ["http1", "json"] }
axum-macros = "0"
bit_reverse = "0"
chrono = "0"
chrono-tz = "0"
crc = "3"
embedded-hal = "1"
embedded-svc = { version = "0", features = ["experimental"] }
encoding_rs = "0"
esp-idf-hal = "0"
esp-idf-svc = { version = "0", features = ["alloc", "experimental"] }
esp-idf-sys = { version = "0", features = ["binstart"] }
postcard = { version = "1", features = ["alloc", "use-crc"] }
serde = "1"
serde_json = "1"
sunrise-next = "1"
tokio = { version = "1", features = ["rt", "net", "io-util"] }
tower-http = { version = "0" }
tracing = "0"

max7219 = { version = "0", optional = true }
smart-leds = { version = "0", optional = true }
smart-leds-trait = { version = "0", optional = true }


[build-dependencies]
build-data = "0"
embuild = "0"
anyhow = "1"


[profile.release]
debug = false
opt-level = "s"
codegen-units = 1
lto = "fat"
strip = true


[profile.dev]
debug = true
opt-level = 2
lto = "off"

# EOF
