# Cargo.toml for esp32temp

[package]
name = "esp32clock"
version = "2.1.5"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2024"
resolver = "2"


[[bin]]
name = "esp32clock"
harness = false     # do not use the built in cargo test harness -> resolve rust-analyzer errors
# test = false


[features]
default = ["esp32c3", "max7219"]
reset_settings = []
esp32s = []
esp32c3 = []
max7219 = ["dep:max7219"]
ws2812 = ["dep:smart-leds", "dep:smart-leds-trait"]


[dependencies]
anyhow = "1.0"
askama = "0.15"
axum = { version = "0.8", features = ["http1", "json", "form"] }
axum-macros = "0.5"
bit_reverse = "0.1"
chrono = "0.4"
chrono-tz = { version = "0.10", features = ["filter-by-regex"] }
crc = "3.4"
ds18b20 = { git = "https://github.com/sjm42/ds18b20" }
embedded-hal = "1.0"
embedded-svc = { version = "0.29" }
encoding_rs = "0.8"
esp-idf-hal = "0.46"
esp-idf-svc = { version = "0.52", features = ["alloc", "experimental"] }
esp-idf-sys = { version = "0.37", features = ["binstart"] }
one-wire-bus = { git = "https://github.com/sjm42/one-wire-bus" }
postcard = { version = "1.1", features = ["alloc", "use-crc"] }
serde = "1.0"
serde_json = "1.0"
sunrise = "3.0"
tokio = { version = "1.50", features = ["rt", "net", "io-util"] }
tracing = "0.1"

max7219 = { version = "0.5", optional = true }
smart-leds = { version = "0.4", optional = true }
smart-leds-trait = { version = "0.3", optional = true }


[build-dependencies]
build-data = "0.3"
embuild = "0.33"
anyhow = "1.0"
flate2 = "1.1"


[profile.release]
debug = false
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true


[profile.dev]
debug = true
opt-level = 2
lto = "off"

# EOF
